# isit

./: .gitignore  Makefile  README.md  docker-compose.yml  utils.py
.github/workflows/: lint.yml
.secrets/: finder.env.sample  manager.env.sample  modificator.env.sample  scrapper.env.sample
db-scripts/: setup_db.sql
finder/: .env.sample  Dockerfile  README.md  pyproject.toml
finder/finder/: ciedge2000.py  classifier.py  clip.py  hsv.py  main.py  model_loader.py  models.py  photo.py
isit-svc/: Makefile  pyproject.toml
isit-svc/isit_svc/: main.py
manager/: Dockerfile  README.md  pyproject.toml
manager/manager/: main.py  request_manager.py
modificator/: .env.sample  Dockerfile  README.md  pyproject.toml
modificator/modificator/: duplicates.py  main.py  models.py  pyramid.py  rembcg.py
scrapper/: .env.sample  Dockerfile  Makefile  README.md  pyproject.toml
scrapper/scrapper/: main.py  models.py  query.py  scrapper.py
utils/: constants.py  database.py  models.py  utils.py
