[tool.poetry]
name = "modificator"
version = "0.1.0"
description = ""
authors = ["Данилин Даниил <d-danilin@groupprice.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.13"
asyncio = "^3.4.3"
asyncpg = "^0.29.0"
pillow = "^10.2.0"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
python-dotenv = "^1.0.1"
rembg = "^2.0.55"
imagehash = "^4.3.1"
pydantic = "^2.6.3"

[tool.poetry.scripts]
app = "modificator.main:loader"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
