[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = ""
authors = ["Данилин Даниил <d-danilin@groupprice.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
httpx = "^0.26.0"
bs4 = "^0.0.2"

[tool.poetry.scripts]
app = "scrapper.scrapper:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
